--- a/IReader/res/values/strings.xml
+++ b/IReader/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="hello">Hello World, ScrollActivity!</string>
-    <string name="app_name">eureka</string>
+    <string name="app_name">小绵羊阅读</string>
     <string name="setting_screen_light">screen_light</string>
     <string name="setting_screen_light_def_val">60</string>
     <string name="setting_screen_light_on">light_on</string>
